--- a/styles/components/buttons.module.scss
+++ b/styles/components/buttons.module.scss
@@ -77,3 +77,53 @@ $color: #2f3490;
     box-shadow: 0 8px 25px rgba(237, 28, 40, 0.4) !important;
   }
 }
+
+/* Red button that changes to blue on hover - same styling as rbutton */
+.rbuttonRed {
+  display: inline-block;
+  border: none !important;     
+  outline: none !important;    
+  box-shadow: none !important;
+  padding: .75rem 1.25rem;
+  border-radius: 10rem;
+  color: #fff;
+  border-color: black;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-family: var(--font-cinzel);
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  text-decoration: none;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ed1c28;
+    border-radius: 10rem;
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: $color;
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
+    }
+  }
+}
